# Omnipulse

./: .gitignore  LICENSING.md  README.md
packaging/vikshep-pypi/: CMakeLists.txt  pyproject.toml
packaging/vikshep-pypi/cpp/: vikshep_bindings.cpp
packaging/vikshep-pypi/slurm/: scatter.sbatch
packaging/vikshep-pypi/src/vikshep/: __init__.py
pilot/: benchmark.py  load_geant4.py  train_disco.py
site/: package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/app/licensing/: page.tsx
site/app/tiers/enterprise/: page.tsx
site/app/tiers/phase-1-dsp/: page.tsx
site/app/tiers/phase-2-vector/: page.tsx
site/app/tiers/phase-3-agent/: page.tsx
site/components/: Navbar.tsx
site/components/bios/: FoundersCreatorsBios.tsx  founders.data.ts
site/components/ecosystem/: SisterProductsSection.tsx
site/components/footer/: FooterCTA.tsx  SiteFooter.tsx
site/components/grid/: ModularCommercializationGrid.tsx
site/components/hero/: HeroSection.tsx
site/components/licensing/: DualLicensingProtocolSection.tsx
site/components/pricing/: EnterprisePricing.tsx
site/components/primitives/: Eyebrow.tsx  HairlineRule.tsx  PackageBadge.tsx
site/components/simulator/: InteractiveSimulator.tsx
site/components/simulator/data/: shaHexName.ts
site/components/simulator/lanes/: FfiBridgeLane.tsx  HnswLane.tsx  JsonRpcLane.tsx  KernelLane.tsx  PythonLane.tsx  RustLane.tsx  ShmPointerLane.tsx
site/components/tiers/: TierPageShell.tsx
site/components/tiers/enterprise/: AutoscalerSimulator.tsx
site/components/tiers/phase-1/: FilterBankExplorer.tsx
site/components/tiers/phase-2/: HnswGraphExplorer.tsx
site/components/tiers/phase-3/: PromptRouterStepper.tsx
site/lib/: morlet.ts  sha3.ts  theme-context.tsx
site/lib/tiers/: hnsw-fixture.json  phase-3-trace.json
